fix: use Railway env vars for DB, port, CORS; use VITE_API_URL for frontend